--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -24,6 +24,15 @@ jobs:
             NEXT_PUBLIC_ALGORITHM: ${{ secrets.NEXT_PUBLIC_ALGORITHM }}
             NEXT_PUBLIC_ENCRYPTION_KEY: ${{ secrets.NEXT_PUBLIC_ENCRYPTION_KEY }}
         steps:
+            - name: Create .env from secrets
+              run: |
+                  cat > .env <<EOF
+                  NEXT_PUBLIC_USERNAME=${{ secrets.NEXT_PUBLIC_USERNAME }}
+                  NEXT_PUBLIC_PASSWORD=${{ secrets.NEXT_PUBLIC_PASSWORD }}
+                  NEXT_PUBLIC_ALGORITHM=${{ secrets.NEXT_PUBLIC_ALGORITHM }}
+                  NEXT_PUBLIC_ENCRYPTION_KEY=${{ secrets.NEXT_PUBLIC_ENCRYPTION_KEY }}
+                  BASE_PATH=${{ env.BASE_PATH }}
+                  EOF
             - name: Checkout
               uses: actions/checkout@v4
 
