--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -17,22 +17,7 @@ concurrency:
 jobs:
     build:
         runs-on: ubuntu-latest
-        env:
-            BASE_PATH: "/Sports-equipment-inventory"
-            NEXT_PUBLIC_USERNAME: ${{ secrets.NEXT_PUBLIC_USERNAME }}
-            NEXT_PUBLIC_PASSWORD: ${{ secrets.NEXT_PUBLIC_PASSWORD }}
-            NEXT_PUBLIC_ALGORITHM: ${{ secrets.NEXT_PUBLIC_ALGORITHM }}
-            NEXT_PUBLIC_ENCRYPTION_KEY: ${{ secrets.NEXT_PUBLIC_ENCRYPTION_KEY }}
         steps:
-            - name: Create .env from secrets
-              run: |
-                  cat > .env <<EOF
-                  NEXT_PUBLIC_USERNAME=${{ secrets.NEXT_PUBLIC_USERNAME }}
-                  NEXT_PUBLIC_PASSWORD=${{ secrets.NEXT_PUBLIC_PASSWORD }}
-                  NEXT_PUBLIC_ALGORITHM=${{ secrets.NEXT_PUBLIC_ALGORITHM }}
-                  NEXT_PUBLIC_ENCRYPTION_KEY=${{ secrets.NEXT_PUBLIC_ENCRYPTION_KEY }}
-                  BASE_PATH=${{ env.BASE_PATH }}
-                  EOF
             - name: Checkout
               uses: actions/checkout@v4
 
@@ -45,9 +30,7 @@ jobs:
               run: npm ci
 
             - name: Build (Next.js static export)
-              # next.config.js sets output: "export" so `next build` produces ./out
-              run: |
-                  npm run build
+              run: npm run build
 
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
