--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "19.1.0",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.2.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
